# Rust-Learning

Rust Learning Workspace/: Cargo.toml
Rust Learning Workspace/Struct/src/: main.rs
Rust Learning Workspace/arithmetic-and-type-casting/: Cargo.toml
Rust Learning Workspace/arithmetic-and-type-casting/src/: main.rs
Rust Learning Workspace/collections/: Cargo.toml
Rust Learning Workspace/collections/src/: main.rs
Rust Learning Workspace/embedded-recruitment-task/src/: server.rs
Rust Learning Workspace/enum-and-pattern-matching/: Cargo.toml
Rust Learning Workspace/enum-and-pattern-matching/src/: main.rs
Rust Learning Workspace/error-handling/src/: main.rs
Rust Learning Workspace/generic-types/src/: main.rs
Rust Learning Workspace/life-time/: Cargo.toml
Rust Learning Workspace/life-time/src/: main.rs
Rust Learning Workspace/module-system/: Cargo.toml
Rust Learning Workspace/module-system/src/: back_of_restaurant.rs  lib.rs  main.rs
Rust Learning Workspace/module-system/src/back_of_restaurant/: test_mod.rs
Rust Learning Workspace/traits/src/: main.rs
Rust Workspace/embedded-recruitment-task/: Cargo.toml
