[workspace]
members = [
    "arithmetic-and-type-casting",
    "console-input",
    "dataTypes",
    "flow-control",
    "functions",
    "HelloWorld",
    "ownership",
    "Struct",
    "variables"
, "enum-and-pattern-matching", "module-system", "collections", "error-handling", "generic-types", "traits", "life-time"]
